; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/fsck_ffs/extr_dir.c_freedir.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/fsck_ffs/extr_dir.c_freedir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.dinode = type { i32 }

@di_nlink = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i64)* @freedir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @freedir(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca %union.dinode*, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* %4, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %9, label %21

9:                                                ; preds = %2
  %10 = load i64, i64* %4, align 8
  %11 = call %union.dinode* @ginode(i64 %10)
  store %union.dinode* %11, %union.dinode** %5, align 8
  %12 = load %union.dinode*, %union.dinode** %5, align 8
  %13 = load i32, i32* @di_nlink, align 4
  %14 = load %union.dinode*, %union.dinode** %5, align 8
  %15 = load i32, i32* @di_nlink, align 4
  %16 = call i64 @DIP(%union.dinode* %14, i32 %15)
  %17 = sub nsw i64 %16, 1
  %18 = call i32 @DIP_SET(%union.dinode* %12, i32 %13, i64 %17)
  %19 = load %union.dinode*, %union.dinode** %5, align 8
  %20 = call i32 @inodirty(%union.dinode* %19)
  br label %21

21:                                               ; preds = %9, %2
  %22 = load i64, i64* %3, align 8
  %23 = call i32 @freeino(i64 %22)
  ret void
}

declare dso_local %union.dinode* @ginode(i64) #1

declare dso_local i32 @DIP_SET(%union.dinode*, i32, i64) #1

declare dso_local i64 @DIP(%union.dinode*, i32) #1

declare dso_local i32 @inodirty(%union.dinode*) #1

declare dso_local i32 @freeino(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
